[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sana"
version = "0.1.0"
description = "Inference codebase for SANA"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "accelerate>=1.0.1",
    "mmcv==1.7.2",
    "opencv-python",
    "patch_conv",
    "sentencepiece",
    "timm>=0.6.13",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "xformers>=0.0.32.post2"
]

[tool.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
